@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                         June 14, 2002 - April 14, 2004
+                         June 14, 2002 - April 23, 2004
 
      ----------------------------------------------------------------------
 
@@ -439,6 +439,8 @@ Options
                      |turkish             |                  |         |
                      |--------------------+------------------+---------|
                      |walloon             |walon             |         |
+                     |--------------------+------------------+---------|
+                     |welsh               |cymraeg           |         |
                      +-------------------------------------------------+
 
      ----------------------------------------------------------------------
@@ -585,6 +587,8 @@ Options
            |ca_ES          |Catal`a            |Catalan             |
            |---------------+-------------------+--------------------|
            |cs_CZ          |Cesky              |Czech               |
+           |---------------+-------------------+--------------------|
+           |cy_GB          |Cymraeg            |Welsh               |
            |---------------+-------------------+--------------------|
            |da_DK          |Dansk              |Danish              |
            |---------------+-------------------+--------------------|
