@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - April 14, 2004</p>
+<p>June 14, 2002 - April 23, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -658,6 +658,11 @@ New Breed Software</p>
 	    <td><code>walon</code></td>
 	    <td>&nbsp;</td>
 	  </tr>
+	  <tr>
+	    <td><code>welsh</code></td>
+	    <td><code>cymraeg</code></td>
+	    <td>&nbsp;</td>
+	  </tr>
 	  </table>
 	  </blockquote>
 	</dd>
@@ -870,6 +875,11 @@ New Breed Software</p>
         <td><code>cs_CZ</code></td>
 	<td>Cesky</td>
 	<td>Czech</td>
+      </tr>
+      <tr>
+        <td><code>cy_GB</code></td>
+	<td>Cymraeg</td>
+	<td>Welsh</td>
       </tr>
       <tr>
         <td><code>da_DK</code></td>
