@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.04.19
-.TH TUXPAINT 1 "19 Apr 2004" "0.9.14" "Tux Paint"
+.\" tuxpaint.1 - 2004.04.23
+.TH TUXPAINT 1 "23 Apr 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -442,6 +442,7 @@ Pere Pujal Carabantes,
 Jacques Chion,
 Urska Colner,
 Ricardo Cruz,
+Kevin Donnelly,
 Doruk Fisek,
 Dovix,
 Korvigellou An Drouizig (Philippe),
